--- a/APM/src/app/products/product-list.component.html
+++ b/APM/src/app/products/product-list.component.html
@@ -47,7 +47,9 @@
                         <td>{{product.productCode| lowercase | convertToSpaces: '-'}}</td>
                         <td>{{product.releaseDate}}</td>
                         <td>{{product.price| currency: 'EUR': true: '1.2-2'}}</td>
-                        <td>{{product.starRating}}</td>
+                        <!--property binding-->
+                        <td><pm-star [rating]='product.starRating'
+                            (ratingClicked)='onRatingClicked($event)'></pm-star></td>
                         
                     </tr>
                 </tbody>
